--- a/trunk/engine/vc.net/SeedSearcher.vcproj
+++ b/trunk/engine/vc.net/SeedSearcher.vcproj
@@ -28,6 +28,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				StringPooling="TRUE"
 				MinimalRebuild="TRUE"
+				ExceptionHandling="TRUE"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="5"
@@ -70,13 +71,14 @@
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
 			ConfigurationType="1"
-			CharacterSet="2"
+			CharacterSet="0"
 			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/EHa"
 				Optimization="2"
 				GlobalOptimizations="TRUE"
-				InlineFunctionExpansion="1"
+				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="TRUE"
 				ImproveFloatingPointConsistency="TRUE"
 				FavorSizeOrSpeed="1"
@@ -84,6 +86,7 @@
 				AdditionalIncludeDirectories=".."
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="TRUE"
+				ExceptionHandling="FALSE"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="4"
 				BufferSecurityCheck="FALSE"
@@ -99,12 +102,14 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/LTCG"
 				OutputFile="$(OutDir)/SeedSearcher.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
@@ -125,7 +130,19 @@
 	</Configurations>
 	<Files>
 		<File
+			RelativePath="..\boost\test\cpp_main.cpp">
+		</File>
+		<File
+			RelativePath="..\boost\test\execution_monitor.cpp">
+		</File>
+		<File
+			RelativePath="..\boost\test\execution_monitor.hpp">
+		</File>
+		<File
 			RelativePath="..\main.cpp">
+		</File>
+		<File
+			RelativePath="..\seed.conf">
 		</File>
 	</Files>
 	<Globals>
