Labeled 'v2.2 StatusReport integrated' 9/8/04

--- a/trunk/engine/vc.net/SeedSearcher.vcproj
+++ b/trunk/engine/vc.net/SeedSearcher.vcproj
@@ -131,6 +131,9 @@
 	</Configurations>
 	<Files>
 		<File
+			RelativePath="..\SeedPerformance.cpp">
+		</File>
+		<File
 			RelativePath="..\boost\test\cpp_main.cpp">
 		</File>
 		<File
