--- a/trunk/engine/motifcalc/MotifCalc.vcproj
+++ b/trunk/engine/motifcalc/MotifCalc.vcproj
@@ -2,12 +2,8 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="SeedSearcher"
-	ProjectGUID="{3071C567-8503-473B-A530-6D93E43B1809}"
-	SccProjectName="&quot;$/SeedSearcher&quot;, ECAAAAAA"
-	SccAuxPath=""
-	SccLocalPath=".."
-	SccProvider="MSSCCI:Microsoft Visual SourceSafe"
+	Name="MotifCalc"
+	ProjectGUID="{4B2499B1-89B3-4737-A8E8-BA6EA4A10684}"
 	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
@@ -19,25 +15,20 @@
 			OutputDirectory="Debug"
 			IntermediateDirectory="Debug"
 			ConfigurationType="1"
-			CharacterSet="2"
-			WholeProgramOptimization="FALSE">
+			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/EHa"
 				Optimization="0"
-				AdditionalIncludeDirectories=".."
+				AdditionalIncludeDirectories="F:\Dev\CS\Learning\seedsearcher"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				StringPooling="TRUE"
 				MinimalRebuild="TRUE"
-				ExceptionHandling="FALSE"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="5"
-				StructMemberAlignment="0"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="0"
-				BrowseInformation="1"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="FALSE"
 				DebugInformationFormat="4"/>
@@ -45,17 +36,16 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/SeedSearcher.exe"
+				OutputFile="$(OutDir)/MotifCalc.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/SeedSearcher.pdb"
+				ProgramDatabaseFile="$(OutDir)/MotifCalc.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-				CommandLine="copy $(TargetPath) $(SolutionDir)\..\winseedD.exe"/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
@@ -78,30 +68,25 @@
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
 			ConfigurationType="1"
-			CharacterSet="0"
+			CharacterSet="2"
 			WholeProgramOptimization="TRUE">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/EHa"
-				Optimization="2"
+				Optimization="3"
 				GlobalOptimizations="TRUE"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="TRUE"
-				ImproveFloatingPointConsistency="TRUE"
 				FavorSizeOrSpeed="1"
-				OmitFramePointers="FALSE"
-				AdditionalIncludeDirectories=".."
+				OmitFramePointers="TRUE"
+				AdditionalIncludeDirectories="F:\Dev\CS\Learning\seedsearcher"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="TRUE"
-				ExceptionHandling="FALSE"
-				BasicRuntimeChecks="0"
 				RuntimeLibrary="4"
 				BufferSecurityCheck="FALSE"
-				EnableFunctionLevelLinking="FALSE"
+				EnableFunctionLevelLinking="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="0"
-				BrowseInformation="1"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="FALSE"
 				DebugInformationFormat="3"/>
@@ -109,20 +94,17 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="/LTCG"
-				OutputFile="$(OutDir)/SeedSearcher.exe"
+				OutputFile="$(OutDir)/MotifCalc.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				OptimizeForWindows98="1"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-				CommandLine="copy $(TargetPath) $(SolutionDir)\..\winseed.exe"/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
@@ -145,8 +127,8 @@
 	</References>
 	<Files>
 		<Filter
-			Name="boost"
-			Filter="">
+			Name="Source Files"
+			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm">
 			<File
 				RelativePath="..\boost\test\cpp_main.cpp">
 			</File>
@@ -154,24 +136,17 @@
 				RelativePath="..\boost\test\execution_monitor.cpp">
 			</File>
 			<File
-				RelativePath="..\boost\test\execution_monitor.hpp">
+				RelativePath="MotifCalc.cpp">
 			</File>
 		</Filter>
-		<File
-			RelativePath="..\main.cpp">
-		</File>
-		<File
-			RelativePath="..\main.h">
-		</File>
-		<File
-			RelativePath="..\makefile">
-		</File>
-		<File
-			RelativePath="..\seed.conf">
-		</File>
-		<File
-			RelativePath="..\SeedPerformance.cpp">
-		</File>
+		<Filter
+			Name="Header Files"
+			Filter="h;hpp;hxx;hm;inl;inc">
+		</Filter>
+		<Filter
+			Name="Resource Files"
+			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe">
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
