--- a/trunk/engine/Makefile
+++ b/trunk/engine/Makefile
@@ -34,16 +34,13 @@ SOURCES = Alphabet.cpp Assignment.cpp Cluster.cpp \
 		
 MYSQL_LIB_DIR = /sw/lib/mysql
 
-all:	seed motifcalc
+all:	seed 
 
 seed$(EXE): main.o $(OBJS) status_reporter/DummyStatusReporter.o	
 	$(CC) $(CCFLAGS) -o seed $(OBJS) main.o status_reporter/DummyStatusReporter.o
 	
 seed_server$(EXE): main.o $(OBJS) status_reporter/StatusReporter.o
 	$(CC) $(CCFLAGS) -L$(MYSQL_LIB_DIR) -lmysqlclient -o seed_server $(OBJS) main.o status_reporter/StatusReporter.o
-	
-motifcalc$(EXE): motifcalc/MotifCalc.o 	$(OBJS)
-	$(CC) $(CCFLAGS) -o motif_calc $(OBJS) motifcalc/MotifCalc.o 
 
 %.o: %.cpp 
 	$(CC) -c $(CCFLAGS) $(IFLAGS) $(LDFLAGS) -o $@ $<
