--- a/trunk/engine/vc.net/Core.vcproj
+++ b/trunk/engine/vc.net/Core.vcproj
@@ -157,6 +157,9 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc">
 			<File
+				RelativePath="..\core\AllocPolicy.h">
+			</File>
+			<File
 				RelativePath="..\CORE\Argv.h">
 			</File>
 			<File
