Labeled 'v2.33' 10/12/04 * Features are sorted based on 	1) bonf-corrected score 	2) score 	3) assignment (e.g. AAT < ACAA)

--- a/trunk/engine/vc.net/SeedSearcher.vcproj
+++ b/trunk/engine/vc.net/SeedSearcher.vcproj
@@ -148,13 +148,25 @@
 			Name="boost"
 			Filter="">
 			<File
+				RelativePath="..\boost\filesystem\convenience.cpp">
+			</File>
+			<File
 				RelativePath="..\boost\test\cpp_main.cpp">
+			</File>
+			<File
+				RelativePath="..\boost\filesystem\exception.cpp">
 			</File>
 			<File
 				RelativePath="..\boost\test\execution_monitor.cpp">
 			</File>
 			<File
 				RelativePath="..\boost\test\execution_monitor.hpp">
+			</File>
+			<File
+				RelativePath="..\boost\filesystem\operations_posix_windows.cpp">
+			</File>
+			<File
+				RelativePath="..\boost\filesystem\path_posix_windows.cpp">
 			</File>
 		</Filter>
 		<File
@@ -171,6 +183,9 @@
 		</File>
 		<File
 			RelativePath="..\SeedPerformance.cpp">
+		</File>
+		<File
+			RelativePath="..\Todo.txt">
 		</File>
 	</Files>
 	<Globals>
